<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="nav_home">Home</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_notifications">Notifications</string>

    <string name="menu_home">Home</string>
    <string name="menu_userDetails">User Details</string>
    <string name="menu_settings">Settings</string>

    <string name="details_title">User Details</string>
    <string name="details_firstName">First Name</string>
    <string name="details_lastName">Last Name</string>
    <string name="details_emailAddress">Email Address</string>

    <string name="user_holidayTitle">User Holiday Requests</string>
    <string name="user_btnHolidayRequest">Holiday Request</string>

    <!-- Activity_Main -->
    <string name="text_num0">0</string>
    <string name="text_num1">1</string>
    <string name="text_num2">2</string>
    <string name="text_num3">3</string>
    <string name="text_num4">4</string>
    <string name="text_num5">5</string>
    <string name="text_num6">6</string>
    <string name="text_num7">7</string>
    <string name="text_num8">8</string>
    <string name="text_num9">9</string>
    <string name="text_delete">Delete</string>

    <!-- activity_registration-->
    <string name="text_fnhint">First Name</string>
    <string name="text_lnhint">Last Name</string>
    <string name="text_newpin">Please Enter a New Pin</string>
    <string name="arbtn_submit">Submit</string>

    <!--Login/Logout Text Resources -->
    <string name="button_logout">Logout</string>
    <string name="logoutbox_title">Confirmation PopUp!</string>
    <string name="logoutbox_alert1">You sure, that you want to logout?</string>

    <!-- Bottom Navigation -->
    <string name="bntex_logout">logout</string>
    <string name="bntext_dashboard">Dashboard</string>
    <string name="bntext_settings">Settings</string>
    
    <!-- activity_admin -->
    <string name="admin_headermessage">Welcome to the Admin Page</string>
    <string name="aabtn_employeeSubmit">Submit Employee Info</string>
    <string name="aabtn_adminCenter">Holiday Center</string>
    <string name="aabtn_adminSettings">Admin Profile</string>
    <string name="aabtn_adminNotifications">Notification Center</string>
    <string name="aabtn_adminPrivacy">Privacy Policy</string>

    <!-- activity_admin_user -->
    <string name="aautext_userlist">User List</string>

    <!-- activity_regular_user -->
    <string name="arutext_title">Employee Dashboard</string>
    <string name="arutext_userpreferences">User Preferences</string>
    <string name="arutext_holidaycenter">Holiday Center</string>
    <string name="arutext_notificationcenter">Notification Center</string>

    <!-- activity_user_details -->
    <string name="aud_title">Hello</string>
    <string name="aud_fnint">First Name</string>
    <string name="aud_lnint">Last Name</string>
    <string name="aud_unint">Username</string>
    <string name="aud_pinint">PIN</string>
    <string name="audbtn_photoTake">Take Photo</string>
    <string name="audbtn_edit">Edit</string>
    <string name="audbtn_resetPassword">Reset Password</string>
    <string name="audbtn_backDash">Back to Dashboard</string>
    <string name="audprof_profilephoto">Profile Photo</string>

    <!-- header -->
    <string name="header_title">Please Enter Login Details!</string>

    <!-- activity_holiday_requests -->
    <string name="ahrtext_reason">Reason for Holiday</string>
    <string name="ahrtext_startdate">Start Date</string>
    <string name="ahrtext_enddate">End Date</string>
    <string name="ahrtext_currentholiday">Current Holiday Requests</string>
    <string name="ahrbtn_submit">Submit Request</string>

    <!-- privacy_policy -->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_main">Privacy Policy\n\nEffective Date: January 24th, 2025\n\n1. Introduction\n\nWelcome to Company Application. We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about this privacy notice or our practices with regard to your personal information, please contact us at Marketing Support marketing@thiscompany.com.\n\n2. Information We Collect\n\nWe collect personal information that you voluntarily provide to us when you register on the app, express an interest in obtaining information about us or our products and services, when you participate in activities on the app, or otherwise when you contact us.\n\n3. How We Use Your Information\n\nWe use personal information collected via our app for a variety of business purposes described below. We process your personal information for these purposes in reliance on our legitimate business interests, in order to enter into or perform a contract with you, with your consent, and/or for compliance with our legal obligations.\n\n4. Sharing Your Information\n\nWe only share information with your consent, to comply with laws, to provide you with services, to protect your rights, or to fulfill business obligations.\n\n5. Data Security\n\nWe have implemented appropriate technical and organizational security measures designed to protect the security of any personal information we process. However, please also remember that we cannot guarantee that the internet itself is 100% secure.\n\n6. Your Privacy Rights\n\nIn some regions, such as the European Economic Area (EEA), you have rights that allow you greater access to and control over your personal information. You may review, change, or terminate your account at any time.\n\n7. Changes to This Privacy Policy\n\nWe may update this privacy notice from time to time in order to reflect, for example, changes to our practices or for other operational, legal, or regulatory reasons.\n\n8. Contact Us\n\nIf you have questions or comments about this notice, you may email us at Marketing Support marketing@thiscompany.com or by post to:\n\nThis Company Ltd.\nCentral, Hong Kong</string>
</resources>