<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/holidayReasonEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ahrtext_reason" />

    <EditText
        android:id="@+id/startDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ahrtext_startdate" />

    <EditText
        android:id="@+id/endDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ahrtext_enddate" />

    <Button
        android:id="@+id/submitHolidayRequestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ahrbtn_submit" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ahrtext_currentholiday"
        android:textSize="18sp"
        android:paddingTop="16dp" />

    <ListView
        android:id="@+id/holidayRequestsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu" />

</LinearLayout>